vinegar (1.1.0beta1) unstable; urgency=low

  * Next bugfix release of Vinegar 1.0.

 -- Sebastian Marsching <sebastian.marsching-git-2016@aquenos.com>  Tue, 27 Oct 2020 12:57:51 +0100

vinegar (1.0.2) stable; urgency=low

  * Improved handling of error conditions. A client aborting a transfer
    as part of option negotiation is not considered an error any longer.

 -- Sebastian Marsching <sebastian.marsching-git-2016@aquenos.com>  Tue, 27 Oct 2020 12:56:37 +0100

vinegar (1.0.1) stable; urgency=low

  * Current development version of Vinegar.
  * Fixed a bug causing an exception or wrong results when decoding a
    TFTP error code. This bug only affected messages in the log file and
    did not have any impact on the operation of the TFTP server.

 -- Sebastian Marsching <sebastian.marsching-git-2016@aquenos.com>  Tue, 25 Jun 2019 19:44:44 +0200

vinegar (1.0.0) stable; urgency=low

  * Initial release of Vinegar.

 -- Sebastian Marsching <sebastian.marsching-git-2016@aquenos.com>  Tue, 25 Jun 2019 19:44:44 +0200