@@ -1,6 +1,8 @@
 vinegar (1.1.0beta1) unstable; urgency=low
 
-  * Next bugfix release of Vinegar 1.0.
+  * Added the set_json_value_from_request_body and
+    set_text_value_from_request_body options to the sqlite_update request
+    handler.
 
  -- Sebastian Marsching <sebastian.marsching-git-2016@aquenos.com>  Tue, 27 Oct 2020 12:57:51 +0100
 
